# LLM_Agents

./: .gitignore  pyproject.toml  using-multiple-github-accounts-with-ssh-keys.md
src/Roles/: create_profile.py
src/Roles/utils/: roles.py
testing/: Observations.md  create_profile_llamaindex_oa_v0.py  create_profile_llamaindex_oa_v1.py  create_profile_llamaindex_oa_v2.py  dummy_agent_library.ipynb  google_gemma_example.py  results.md
testing/utils/: store_scenario_to_db.py  tools.py
